--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,17 @@
             "email": "support@simplesoftware.io"
         }
     ],
+    "repositories":
+    [
+            {
+                "type": "vcs",
+                "url": "https://github.com/n7best/BaconQrCode"
+            }
+    ],
     "require": {
         "php": ">=5.4.0",
       	"ext-gd": "*",
-        "bacon/bacon-qr-code": "1.0.*",
+        "bacon/bacon-qr-code": "n7custom as 1.0.*",
         "illuminate/support": ">=4.2.0"
     },
     "require-dev": {
